syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/api/annotations.proto";

option go_package = ".;grpcserver";

message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp datetime = 3;
  google.protobuf.Duration duration = 4;
  string text = 5;
  string userid = 6;
  google.protobuf.Duration timenotify = 7;
}
message Events{
  repeated Event event = 1;
}

message AddEventRequest {
  string title = 1;
  string datetime = 2;
  string duration = 3;
  string text = 4;
  string timenotify = 5;
}

message AddEventResponse {
  oneof result {
    string id = 1;
  }
}

message DeleteEventRequest {
  string id = 1;
}

message DeleteEventResponse {
  oneof result {
    string id = 1;
  }
}

message UpdateEventRequest {
  string id = 1;
  string title = 2;
  string datetime = 3;
  string duration = 4;
  string text = 5;
  string timenotify = 6;
}

message UpdateEventResponse {
  oneof result {
    string id = 1;
  }
}

message GetDateEventRequest {
  string date =1;
}

message GetDateEventResponse {
  oneof result {
    Events events = 1;
  }
}

message GetWeekEventRequest {
  string date = 1;
}

message GetWeekEventResponse {
  oneof result {
    Events events = 1;
  }
}

message GetMonthEventRequest {
  string date = 1;
}

message GetMonthEventResponse {
  oneof result {
    Events events = 1;
  }
}

service CalendarService {
  rpc AddEvent(AddEventRequest) returns (AddEventResponse){
    option (google.api.http) = {
      post: "/events/add"
      body: "*"
    };
  }
  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse) {
    option (google.api.http) = {
      delete: "/events/delete"
    };
  }
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {
    option (google.api.http) = {
      patch: "/events/update"
      body: "*"
    };
  }
  rpc GetDateEvent(GetDateEventRequest) returns (GetDateEventResponse) {
    option (google.api.http) = {
      get: "/events/date"
    };
  }
  rpc GetWeekEvent(GetWeekEventRequest) returns (GetWeekEventResponse) {
    option (google.api.http) = {
      get: "/events/week"
    };
  }
  rpc GetMonthEvent(GetMonthEventRequest) returns (GetMonthEventResponse) {
    option (google.api.http) = {
      get: "/events/month"
    };
  }
}